Tests, overflow fix at input fields

--- a/src/app/pages/weather/weather.component.scss
+++ b/src/app/pages/weather/weather.component.scss
@@ -3,6 +3,50 @@
   max-height: 230px;
   padding: 20px;
   z-index: 2;
+
+  h2 {
+    font-size: 26;
+  }
+  h4 {
+    font-weight: bold;
+    color: rgba($color: #000000, $alpha: 0.4);
+  }
+  p,
+  li {
+    font-size: 18px;
+  }
+}
+.filterClean{
+  font-size: 14px;
+  color: rgba($color: #000000, $alpha: 0.6);
+  text-decoration: underline;
+  margin-left: auto;
+  margin-right: 15px;
+  cursor: pointer;
+  transition: color 300ms ease;
+}
+.filterClean:hover{
+  color: black;
+}
+.searchBox {
+  height: 44px;
+  input {
+    border: none;
+    padding: 10px 15px;
+    background-color: rgba($color: #fff, $alpha: 0.6);
+  }
+  input:focus {
+    outline: none;
+  }
+  input:nth-child(1) {
+    border-radius: 20px 0px 0px 20px;
+    padding-right: 5px;
+  }
+  input:nth-child(2) {
+    border-left: 1px solid rgba($color: #000000, $alpha: 0.2);
+    border-radius: 0px 20px 20px 0px;
+    padding-left: 5px;
+  }
 }
 .container {
   background: linear-gradient(329.54deg, #5ce7b5 0%, #17d1eb 100%), #ffffff;
@@ -12,20 +56,16 @@
   width: 95%;
   border-radius: 12px;
   margin: 10px auto;
+
+  overflow: hidden;
 }
-.otherDays {
-  z-index: 2;
-  background-color: #fff;
-  // margin: 10px;
-  height: fit-content;
-  border-radius: 12px;
-}
+
 .bgitem {
   z-index: 1;
   position: absolute;
   width: 450px;
   height: 340px;
-  right: 40px;
+  right: 20px;
   top: 40px;
   opacity: 0.4;
   // transform: translate(-100%, 0);
@@ -46,30 +86,31 @@ li {
 .wind {
   margin-right: 5px;
 }
-.temperature {
-  margin-top: 15px;
+
+.otherDays {
+  z-index: 2;
+  background-color: rgba(255, 255, 255, 0.6);
+  min-width: 200px;
+  // margin: 10px;
+  height: fit-content;
+  border-radius: 12px;
+  transition: all 300ms ease;
+  cursor: pointer;
+  user-select: none;
 }
-.detailLine {
-  height: 140px;
-}
-.alignWeather {
-  display: flex;
-  flex-flow: column;
-  align-items: center;
-  margin-top: 15px;
-}
+
 .dayList {
-  max-height: 70vh;
+  max-height: 65vh;
   overflow-y: auto;
   margin-left: 0px;
   padding-right: 15px;
+  margin-top: 20px;
   margin-bottom: 20px;
+
+  align-items: center;
 }
-.daylist::-webkit-scrollbar {
-  width: 2px;
-}
-.daylist::-webkit-scrollbar-track {
-  background: red;
+ul {
+  margin-bottom: 0px;
 }
 ::-webkit-scrollbar {
   width: 10px;
@@ -81,6 +122,23 @@ li {
 }
 
 ::-webkit-scrollbar-thumb {
-  background: rgba($color: #000000, $alpha: .2);
+  background: rgba($color: #000000, $alpha: 0.2);
   border-radius: 10px;
+}
+@media only screen and (max-width: 768px) {
+  main {
+    .row,
+    .temperature {
+      width: fit-content;
+      margin: 0 auto;
+    }
+  }
+  .bgitem {
+    right: 50%;
+    transform: translate(60%, -50%);
+    top: 50%;
+  }
+  .localeInfo {
+    text-align: center;
+  }
 }
